Clase 42. Contador Component

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -5,3 +5,7 @@
 <button (click)="incrementarPor(1)">+1</button>
 <button (click)="reiniciar()">Reiniciar</button>
 <button (click)="incrementarPor(-1)">-1</button>
+
+<hr>
+
+<app-contador></app-contador>
