--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!-- <app-contador></app-contador> -->
 
 <app-heroes-heroe></app-heroes-heroe>
-<app-heroes-lista></app-heroes-lista>
+
+<!-- <app-heroes-lista></app-heroes-lista> -->
