--- a/02-bases/src/app/heroes/heroe/heroe.component.html
+++ b/02-bases/src/app/heroes/heroe/heroe.component.html
@@ -1,1 +1,18 @@
-<p>heroe works!</p>
+<h1>{{nombre}}</h1>
+
+<dl>
+  <td>Nombre: </td>
+  <dd>{{nombre}}</dd>
+
+  <td>Edad: </td>
+  <dd>{{edad}}</dd>
+
+  <td>Método: </td>
+  <dd>agún métoo</dd>
+
+  <td>Mayúsculas: </td>
+  <dd>nombre mayúsculas</dd>
+</dl>
+
+<button class="btn btn-primary mx-2">Cambiar nombre</button>
+<button class="btn btn-primary">Cambiar edad</button>
