--- a/02-bases/src/app/heroes/heroe/heroe.component.html
+++ b/02-bases/src/app/heroes/heroe/heroe.component.html
@@ -8,10 +8,10 @@
   <dd>{{edad}}</dd>
 
   <td>Método: </td>
-  <dd>agún métoo</dd>
+  <dd>{{obtenerDescripcionHeroe()}}</dd>
 
   <td>Mayúsculas: </td>
-  <dd>nombre mayúsculas</dd>
+  <dd>{{nombreMayusculas}}</dd>
 </dl>
 
 <button class="btn btn-primary mx-2">Cambiar nombre</button>
