--- a/02-bases/src/app/heroes/heroe/heroe.component.html
+++ b/02-bases/src/app/heroes/heroe/heroe.component.html
@@ -14,5 +14,5 @@
   <dd>{{nombreMayusculas}}</dd>
 </dl>
 
-<button class="btn btn-primary mx-2">Cambiar nombre</button>
-<button class="btn btn-primary">Cambiar edad</button>
+<button class="btn btn-primary mx-2" (click)="cambiarHeroe()">Cambiar nombre</button>
+<button class="btn btn-primary" (click)="cambiarEdad()">Cambiar edad</button>
