Clase 49. Directiva *ngFor

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -2,6 +2,6 @@
 <hr>
 <!-- <app-contador></app-contador> -->
 
-<app-heroes-heroe></app-heroes-heroe>
+<!-- <app-heroes-heroe></app-heroes-heroe> -->
 
-<!-- <app-heroes-lista></app-heroes-lista> -->
+<app-heroes-lista></app-heroes-lista>
