--- a/02-bases/src/app/heroes/lista/lista.component.html
+++ b/02-bases/src/app/heroes/lista/lista.component.html
@@ -1,1 +1,12 @@
-<p>lista works!</p>
+<h3>Lista de héroes</h3>
+
+<h3>Héroe borrado <small class="text-danger">XXXX</small>.</h3>
+<h3>No ha borrado nada.</h3>
+
+<button class="btn btn-outline-danger">
+  Borrar último héroe
+</button>
+
+<ul class="mt-2 list-group">
+  <li *ngFor="let nombre of heroes" class="list-group-item">{{nombre}}</li>
+</ul>
