--- a/02-bases/src/app/heroes/lista/lista.component.html
+++ b/02-bases/src/app/heroes/lista/lista.component.html
@@ -1,9 +1,17 @@
 <h3>Lista de héroes</h3>
 
-<h3>Héroe borrado <small class="text-danger">XXXX</small>.</h3>
-<h3>No ha borrado nada.</h3>
+<div *ngIf="heroeEliminado; else nadaQueBorrar">
+  <h3>Héroe borrado <small class="text-danger">{{heroeEliminado}}</small>.</h3>
+</div>
 
-<button class="btn btn-outline-danger">
+<ng-template #nadaQueBorrar>
+  <h3>No ha borrado nada.</h3>
+</ng-template>
+
+<button
+  class="btn btn-outline-danger"
+  (click)="eliminarUltimoHeroe()"
+  *ngIf="heroes.length > 0">
   Borrar último héroe
 </button>
 
