--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <hr>
-<!-- <app-contador></app-contador> -->
+<app-contador></app-contador>
 
-<!-- <app-heroes-heroe></app-heroes-heroe> -->
+<app-heroes-heroe></app-heroes-heroe>
 
 <app-heroes-lista></app-heroes-lista>
