--- a/02-bases/src/app/dbz/pages/pagina-principal.component.html
+++ b/02-bases/src/app/dbz/pages/pagina-principal.component.html
@@ -3,21 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <h4>Listado</h4>
-
-    <ul class="list-group">
-      <li class="list-group-item">Krillin - 500</li>
-      <li class="list-group-item">Goku - 10.000</li>
-    </ul>
+    <app-dbz-lista></app-dbz-lista>
   </div>
 
   <div class="col">
-    <h4>Añadir personaje</h4>
-
-    <form class="row">
-      <input type="text" class="form-control mb-2" placeholder="Nombre">
-      <input type="number" class="form-control mb-2" placeholder="Poder">
-      <button type="submit" class="btn btn-primary">Añadir</button>
-    </form>
+    <app-dbz-anhadir-personaje></app-dbz-anhadir-personaje>
   </div>
 </div>
