--- a/02-bases/src/app/dbz/pages/pagina-principal.component.html
+++ b/02-bases/src/app/dbz/pages/pagina-principal.component.html
@@ -3,10 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <app-dbz-lista></app-dbz-lista>
+    <dbz-lista></dbz-lista>
   </div>
 
   <div class="col">
-    <app-dbz-anhadir-personaje></app-dbz-anhadir-personaje>
+    <dbz-anhadir-personaje></dbz-anhadir-personaje>
   </div>
 </div>
