--- a/02-bases/src/app/dbz/components/lista/lista.component.html
+++ b/02-bases/src/app/dbz/components/lista/lista.component.html
@@ -1,9 +1,18 @@
 <h4>Listado</h4>
 
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let personaje of listaPersonajes">
+
+  <li class="list-group-item"
+    *ngFor="let personaje of listaPersonajes; index as indice; first as esPrimero; last as esUltimo; even as esPar; odd as esImpar">
+
+    <span class="text-primary">{{indice + 1}}. </span>
     <span>{{ personaje.nombre }} - </span>
     <strong>Poder: </strong>
     <span>{{ personaje.poder }}</span>
+    <!-- <span> Es el primero: {{esPrimero}}</span>
+    <span> Es el último: {{esUltimo}}</span>
+    <span> Es par: {{esPar}}</span>
+    <span> Es impar: {{esImpar}}</span> -->
   </li>
+
 </ul>
