Clase 65. ngClass - Clases basado en condiciones

--- a/02-bases/src/app/dbz/components/lista/lista.component.html
+++ b/02-bases/src/app/dbz/components/lista/lista.component.html
@@ -3,7 +3,12 @@
 <ul class="list-group">
 
   <li class="list-group-item"
-    *ngFor="let personaje of listaPersonajes; index as indice; first as esPrimero; last as esUltimo; even as esPar; odd as esImpar">
+    *ngFor="let personaje of listaPersonajes; index as indice; first as esPrimero; last as esUltimo; even as esPar; odd as esImpar"
+    [ngClass]="{
+      'list-group-item-success': esPrimero,
+      'list-group-item-dark': esUltimo,
+      'list-group-item-primary': esImpar
+    }">
 
     <span class="text-primary">{{indice + 1}}. </span>
     <span>{{ personaje.nombre }} - </span>
