Clase 66. FormsModule y ngModel

--- a/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
+++ b/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
@@ -1,7 +1,8 @@
 <h4>Añadir personaje</h4>
 
 <form class="row">
-  <input type="text" class="form-control mb-2" placeholder="Nombre">
-  <input type="number" class="form-control mb-2" placeholder="Poder">
-  <button type="submit" class="btn btn-primary">Añadir</button>
+  <input type="text" [(ngModel)]="personaje.nombre" class="form-control mb-2" placeholder="Nombre" name="Nombre">
+  <input type="number" [(ngModel)]="personaje.poder" class="form-control mb-2" placeholder="Poder" name="Poder">
+  <button type="submit" class="btn btn-primary" (click)="emitirPersonaje()">Añadir</button>
+  <pre>{{personaje | json}}</pre>
 </form>
