Clase 67. @Output() - Emitir eventos al padre

--- a/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
+++ b/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
@@ -1,8 +1,8 @@
 <h4>Añadir personaje</h4>
 
-<form class="row">
+<form class="row" (ngSubmit)="emitirPersonaje()">
   <input type="text" [(ngModel)]="personaje.nombre" class="form-control mb-2" placeholder="Nombre" name="Nombre">
   <input type="number" [(ngModel)]="personaje.poder" class="form-control mb-2" placeholder="Poder" name="Poder">
-  <button type="submit" class="btn btn-primary" (click)="emitirPersonaje()">Añadir</button>
+  <button type="submit" class="btn btn-primary">Añadir</button>
   <pre>{{personaje | json}}</pre>
 </form>
