--- a/02-bases/src/app/dbz/pages/pagina-principal.component.html
+++ b/02-bases/src/app/dbz/pages/pagina-principal.component.html
@@ -7,6 +7,6 @@
   </div>
 
   <div class="col">
-    <dbz-anhadir-personaje></dbz-anhadir-personaje>
+    <dbz-anhadir-personaje (nuevoPersonaje)="nuevoPersonaje($event)"></dbz-anhadir-personaje>
   </div>
 </div>
