--- a/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
+++ b/02-bases/src/app/dbz/components/anhadir-personaje/anhadir-personaje.component.html
@@ -4,5 +4,5 @@
   <input type="text" [(ngModel)]="personaje.nombre" class="form-control mb-2" placeholder="Nombre" name="Nombre">
   <input type="number" [(ngModel)]="personaje.poder" class="form-control mb-2" placeholder="Poder" name="Poder">
   <button type="submit" class="btn btn-primary">Añadir</button>
-  <pre>{{personaje | json}}</pre>
+  <!-- <pre>{{personaje | json}}</pre> -->
 </form>
