--- a/02-bases/src/app/dbz/pages/pagina-principal.component.html
+++ b/02-bases/src/app/dbz/pages/pagina-principal.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <dbz-lista [listaPersonajes]="personajes"></dbz-lista>
+    <dbz-lista [listaPersonajes]="personajes" (personajeEliminado)="eliminarPersonaje($event)"></dbz-lista>
   </div>
 
   <div class="col">
