--- a/02-bases/src/app/dbz/components/lista/lista.component.html
+++ b/02-bases/src/app/dbz/components/lista/lista.component.html
@@ -21,7 +21,7 @@
       <span> Es impar: {{esImpar}}</span> -->
     </div>
 
-    <button class="btn btn-danger" (click)="eliminarPersonaje(personaje.id ?? '')">X</button>
+    <button class="btn btn-danger" (click)="eliminarPersonaje(personaje.id)">X</button>
 
   </li>
 
