Clase 89. Diseño de Gifs Components

--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex">
-  <shared-barra-lateral></shared-barra-lateral>
-
+  <barra-lateral></barra-lateral>
+  <pagina-inicio class="flex-fill"></pagina-inicio>
 </div>
