Clase 97. Mostrar los Gifs en pantalla

--- a/03-gifs-app/src/app/gifs/pages/inicio/inicio.component.html
+++ b/03-gifs-app/src/app/gifs/pages/inicio/inicio.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <div class="col-12 pt-2">
-    <lista-gifs></lista-gifs>
+    <lista-gifs [gifs]="gifs"></lista-gifs>
   </div>
 </div>
