--- a/03-gifs-app/src/app/gifs/components/tarjeta/tarjeta.component.html
+++ b/03-gifs-app/src/app/gifs/components/tarjeta/tarjeta.component.html
@@ -1,9 +1,11 @@
 <div class="text-center card mb-2 bg-dark">
-  <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top">
+  <!-- <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top"> -->
+
+  <imagen-perezosa></imagen-perezosa>
 
   <div class="card-body text-white">
     <p class="card-text">
-      {{gif.title}}
+      {{gif.title || 'Sin título'}}
     </p>
   </div>
 </div>
