--- a/03-gifs-app/src/app/shared/components/imagen-perezosa/imagen-perezosa.component.html
+++ b/03-gifs-app/src/app/shared/components/imagen-perezosa/imagen-perezosa.component.html
@@ -1,1 +1,6 @@
-<p>imagen-perezosa works!</p>
+<div class="d-flex justify-content-center ">
+
+  <img [src]="url" [alt]="alt" class="card-img-top" (load)="imagenCargada()" [ngStyle]="{ display: cargada ? '' : 'none'}" />
+  <img *ngIf="!cargada" src="assets/carga.svg" class="mt-3" />
+
+</div>
