Clase 116. Router Module y Páginas - SPA

--- a/04-paises-app/src/app/app.component.html
+++ b/04-paises-app/src/app/app.component.html
@@ -5,7 +5,8 @@
   </div>
 
   <div class="col">
-    router
+    <!-- <pagina-inicio></pagina-inicio> -->
+    <pagina-acerca-de></pagina-acerca-de>
   </div>
 
 </div>
