Clase 117. RouterLink y RouterLinkOptions

--- a/04-paises-app/src/app/app.component.html
+++ b/04-paises-app/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div class="row mt-4">
 
   <div class="col-3">
-    sidebar
+    <barra-lateral></barra-lateral>
   </div>
 
   <div class="col">
     <!-- <pagina-inicio></pagina-inicio> -->
-    <pagina-acerca-de></pagina-acerca-de>
+    <!-- <pagina-acerca-de></pagina-acerca-de> -->
+    <pagina-contacto></pagina-contacto>
   </div>
 
 </div>
