Clase 118. Resolución de la tarea

--- a/04-paises-app/src/app/app.component.html
+++ b/04-paises-app/src/app/app.component.html
@@ -5,9 +5,7 @@
   </div>
 
   <div class="col">
-    <!-- <pagina-inicio></pagina-inicio> -->
-    <!-- <pagina-acerca-de></pagina-acerca-de> -->
-    <pagina-contacto></pagina-contacto>
+    <router-outlet></router-outlet>
   </div>
 
 </div>
