Clase 120. LazyLoad - Carga perezosa

--- a/04-paises-app/src/app/shared/components/barra-lateral/barra-lateral.component.html
+++ b/04-paises-app/src/app/shared/components/barra-lateral/barra-lateral.component.html
@@ -13,4 +13,17 @@
   <li routerLink="contacto" routerLinkActive="active" class="list-group-item">
     Contacto
   </li>
+
+  <li routerLink="paises/por-capital" routerLinkActive="active" class="list-group-item">
+    Por capital
+  </li>
+
+  <li routerLink="paises/por-pais" routerLinkActive="active" class="list-group-item">
+    Por país
+  </li>
+
+  <li routerLink="paises/por-region" routerLinkActive="active" class="list-group-item">
+    Por región
+  </li>
+
 </ul>
