Clase 121. Estructura de páginas y SearchBox Component

--- a/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
@@ -1,1 +1,16 @@
-<p>por-capital works!</p>
+<h2>Por capital</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <buscador placeholder="Nuevo placeholder"></buscador>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    tabla de resultados
+  </div>
+</div>
