--- a/04-paises-app/src/app/shared/components/barra-lateral/barra-lateral.component.html
+++ b/04-paises-app/src/app/shared/components/barra-lateral/barra-lateral.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 <ul class="list-group">
-  <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="list-group-item">
+  <!-- <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="list-group-item">
     Inicio
   </li>
 
@@ -12,7 +12,7 @@
 
   <li routerLink="contacto" routerLinkActive="active" class="list-group-item">
     Contacto
-  </li>
+  </li> -->
 
   <li routerLink="paises/por-capital" routerLinkActive="active" class="list-group-item">
     Por capital
