Clase 122. Funcionamiento del SearchBox

--- a/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <buscador placeholder="Nuevo placeholder"></buscador>
+    <buscador placeholder="Nuevo placeholder" (buscando)="buscarPorCapital($event)"></buscador>
   </div>
 </div>
 
