--- a/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
@@ -11,6 +11,10 @@
 
 <div class="row">
   <div class="col">
-    tabla de resultados
+    <ul>
+      <li *ngFor="let pais of paises">
+        {{pais.capital}} - {{pais.population}}
+      </li>
+    </ul>
   </div>
 </div>
