Clase 127. Tarea - País y Región

--- a/04-paises-app/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/04-paises-app/src/app/paises/pages/por-pais/por-pais.component.html
@@ -1,1 +1,16 @@
-<p>por-pais works!</p>
+<h2>Por país</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <buscador placeholder="Escribe el país..." (buscando)="buscarPorPais($event)"></buscador>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    <tabla-paises [paises]="paises"></tabla-paises>
+  </div>
+</div>
