--- a/04-paises-app/src/app/paises/pages/por-region/por-region.component.html
+++ b/04-paises-app/src/app/paises/pages/por-region/por-region.component.html
@@ -1,1 +1,16 @@
-<p>por-region works!</p>
+<h2>Por región</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <buscador placeholder="Escribe la región..." (buscando)="buscarPorRegion($event)"></buscador>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    <tabla-paises [paises]="paises"></tabla-paises>
+  </div>
+</div>
