--- a/04-paises-app/src/app/paises/pages/pais/pais.component.html
+++ b/04-paises-app/src/app/paises/pages/pais/pais.component.html
@@ -1,1 +1,47 @@
-<p>pais works!</p>
+<ng-template #cargando>
+  <div class="alert alert-info text-center">
+    Espere por favor
+  </div>
+</ng-template>
+
+<div *ngIf="pais; else cargando">
+  <div class="row">
+    <div class="col-12">
+      <h2>País: <strong>{{ pais.name.common }}</strong></h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img [src]="pais.flags.svg" [alt]="pais.name.common" class="img-thumbnail">
+    </div>
+
+    <div class="col">
+      <h3>Información</h3>
+      <ul class="list-group">
+        <li class="list-group-item"> Población: <strong>{{ pais.population | number }}</strong> </li>
+        <li class="list-group-item"> Código: <strong>{{ pais.cca3 }}</strong> </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col">
+      <h3>Traducciones</h3>
+
+      <div class="d-flex flex-wrap">
+        <span class="badge bg-primary m-1">{{ pais.translations['ara'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['bre'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['ces'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['cym'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['deu'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['est'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['fin'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['ita'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['kor'].common }}</span>
+        <span class="badge bg-primary m-1">{{ pais.translations['per'].common }}</span>
+      </div>
+    </div>
+  </div>
+</div>
