--- a/04-paises-app/src/app/paises/components/tabla/tabla.component.html
+++ b/04-paises-app/src/app/paises/components/tabla/tabla.component.html
@@ -24,7 +24,7 @@
         <td>{{pais.name.common}}</td>
         <td>{{pais.capital}}</td>
         <td>{{pais.population | number}}</td>
-        <td><a href="#">Ver más</a></td>
+        <td><a [routerLink]="['/paises/por', pais.cca3]">Info</a></td>
       </tr>
     </tbody>
   </table>
