Clase 137. LoadingComponent - Mostrar un indicador de carga

--- a/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
@@ -11,6 +11,7 @@
 
 <div class="row">
   <div class="col">
+    <spinner-carga></spinner-carga>
     <tabla-paises [paises]="paises"></tabla-paises>
   </div>
 </div>
