--- a/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
+++ b/04-paises-app/src/app/paises/pages/por-capital/por-capital.component.html
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col">
-    <spinner-carga></spinner-carga>
+    <spinner-carga *ngIf="cargando"></spinner-carga>
     <tabla-paises [paises]="paises"></tabla-paises>
   </div>
 </div>
