--- a/04-paises-app/src/app/paises/pages/por-region/por-region.component.html
+++ b/04-paises-app/src/app/paises/pages/por-region/por-region.component.html
@@ -3,7 +3,9 @@
 
 <div class="row">
   <div class="col">
-    <buscador placeholder="Escribe la región..." (buscando)="buscarPorRegion($event)"></buscador>
+    <button *ngFor="let region of regiones" class="btn mx-2" [ngClass]="{'btn-outline-primary': regionSeleccionada === region}" (click)="buscarPorRegion(region)">
+      {{ region }}
+    </button>
   </div>
 </div>
 
