--- a/04-paises-app/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/04-paises-app/src/app/paises/pages/por-pais/por-pais.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <buscador placeholder="Escribe el país..." (buscando)="buscarPorPais($event)"></buscador>
+    <buscador [valorInicial]="valorInicial" placeholder="Escribe el país..." (buscando)="buscarPorPais($event)"></buscador>
   </div>
 </div>
 
@@ -11,6 +11,7 @@
 
 <div class="row">
   <div class="col">
+    <spinner-carga *ngIf="cargando"></spinner-carga>
     <tabla-paises [paises]="paises"></tabla-paises>
   </div>
 </div>
