--- a/04-paises-app/src/app/shared/components/buscador/buscador.component.html
+++ b/04-paises-app/src/app/shared/components/buscador/buscador.component.html
@@ -1,2 +1,2 @@
 <!-- <input type="text" [placeholder]="placeholder" class="form-control" (keyup.enter)="buscar()" #entradaBusqueda> -->
-<input type="text" [placeholder]="placeholder" class="form-control" (keyup)="teclaPulsada(entradaBusqueda.value)" #entradaBusqueda>
+<input type="text" [placeholder]="placeholder" [value]="valorInicial" class="form-control" (keyup)="teclaPulsada(entradaBusqueda.value)" #entradaBusqueda>
