--- a/05-pipes-app/src/app/shared/components/menu/menu.component.html
+++ b/05-pipes-app/src/app/shared/components/menu/menu.component.html
@@ -1,3 +1,3 @@
-<p-menubar [model]="elementosMenu">
+<p-menubar [model]="elementosMenu" styleClass="pl-0">
   <img src="./favicon.ico" alt="Icono">
 </p-menubar>
