--- a/05-pipes-app/src/app/productos/pages/basica/basica.component.html
+++ b/05-pipes-app/src/app/productos/pages/basica/basica.component.html
@@ -20,4 +20,44 @@
       {{ nombreCompleto | titlecase }}
     </p-card>
   </div>
+
+  <div class="col-12 md:col-6">
+    <p-card header="titlecase">
+      <ol>
+        <li>fecha</li>
+        <li>fecha | date</li>
+        <li>fecha | date:'short'</li>
+        <li>fecha | date:'long'</li>
+        <li>fecha | date:'MMMM'</li>
+        <li>fecha | date:'MMMM dd, yyyy'</li>
+      </ol>
+
+      <hr>
+
+      <ol>
+        <li>fecha | date:'long':'GMT-6'</li>
+        <li>fecha | date:'long':'GMT-4'</li>
+      </ol>
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-card header="titlecase">
+      <ol>
+        <li>{{ fecha }}</li>
+        <li>{{ fecha | date }}</li>
+        <li>{{ fecha | date:'short' }}</li>
+        <li>{{ fecha | date:'long' }}</li>
+        <li>{{ fecha | date:'MMMM' }}</li>
+        <li>{{ fecha | date:'MMMM dd, yyyy' }}</li>
+      </ol>
+
+      <hr>
+
+      <ol>
+        <li>{{ fecha | date:'long':'GMT-6' }}</li>
+        <li>{{ fecha | date:'long':'GMT-4' }}</li>
+      </ol>
+    </p-card>
+  </div>
 </div>
