Clase 160. Cambiar idioma global y manualmente

--- a/05-pipes-app/src/app/productos/pages/basica/basica.component.html
+++ b/05-pipes-app/src/app/productos/pages/basica/basica.component.html
@@ -37,6 +37,9 @@
       <ol>
         <li>fecha | date:'long':'GMT-6'</li>
         <li>fecha | date:'long':'GMT-4'</li>
+        <li>fecha | date:'long':'':'es-HN'</li>
+        <li>fecha | date:'long':'':'en-US'</li>
+        <li>fecha | date:'long':'':'fr-CA'</li>
       </ol>
     </p-card>
   </div>
@@ -57,6 +60,9 @@
       <ol>
         <li>{{ fecha | date:'long':'GMT-6' }}</li>
         <li>{{ fecha | date:'long':'GMT-4' }}</li>
+        <li>{{ fecha | date:'long':'':'es-HN' }}</li>
+        <li>{{ fecha | date:'long':'':'en-US' }}</li>
+        <li>{{ fecha | date:'long':'':'fr-CA' }}</li>
       </ol>
     </p-card>
   </div>
