--- a/05-pipes-app/src/app/productos/pages/numeros/numeros.component.html
+++ b/05-pipes-app/src/app/productos/pages/numeros/numeros.component.html
@@ -1,1 +1,24 @@
-<p>numeros works!</p>
+<p-panel header="Pipes numéricos" class="p-1">
+  <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
+</p-panel>
+
+<div class="grid">
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas netas" subheader="del presente año">
+      {{ totalVentas + 1235 | number:'1.2-2' }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas brutas" subheader="del presente año">
+      {{ totalVentas | currency:'EUR':'symbol-narrow':'1.6-6' }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="Ganancia porcentual" subheader="del presente año">
+      {{ porcentaje | percent:'1.2-2' }}
+    </p-card>
+  </div>
+
+</div>
