--- a/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
+++ b/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
@@ -19,7 +19,23 @@
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>Original</b>
+      <pre>{{ clientes }}</pre>
 
+      <b>Slice:0:2</b>
+      <pre>{{ clientes | slice:0:2 }}</pre>
+
+      <b>Slice:1:2</b>
+      <pre>{{ clientes | slice:1:2 }}</pre>
+
+      <b>Slice:1:3</b>
+      <pre>{{ clientes | slice:1:3 }}</pre>
+
+      <b>Slice:3:4</b>
+      <pre>{{ clientes | slice:3:4 }}</pre>
+
+      <b>Slice:0:-3</b>
+      <pre>{{ clientes | slice:0:-3 }}</pre>
     </p-fieldset>
   </div>
 
