--- a/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
+++ b/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
@@ -41,13 +41,17 @@
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="Json Pipe" [toggleable]="true">
-
+       <pre>{{ persona | json }}</pre>
     </p-fieldset>
   </div>
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
-
+      <ul>
+        <li *ngFor="let elemento of persona | keyvalue">
+          <b>{{ elemento.key | titlecase }}:</b> {{ elemento.value }}
+        </li>
+      </ul>
     </p-fieldset>
   </div>
 
