--- a/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
+++ b/05-pipes-app/src/app/productos/pages/poco-comun/poco-comun.component.html
@@ -57,7 +57,12 @@
 
   <div class="col-12 md:col-6">
     <p-fieldset legend="Async Pipe" [toggleable]="true">
+      <pre *ngIf="!(temporizadorObservable | async)">Resolviendo observable</pre>
+      <pre>{{ temporizadorObservable | async }}</pre>
 
+
+      <pre *ngIf="!(valorPromesa | async)">Resolviendo promesa</pre>
+      <pre>{{ valorPromesa | async }}</pre>
     </p-fieldset>
   </div>
 
