--- a/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
+++ b/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
@@ -1,3 +1,15 @@
 <p-panel header="Pipes personalizados" class="p-1">
-  <p>Pipes personalizados - Creados por {{ 'nosotros' | toggleCase }}</p>
+  <p>Pipes personalizados - Creados por {{ 'nosotros' | toggleCase:true }}</p>
 </p-panel>
+
+<p-toolbar>
+  <div class="p-toolbar-group-start">
+    <p-button label="ToggleCase" icon="pi pi-search" class="mr-2" />
+  </div>
+
+  <div class="p-toolbar-group-end">
+    <p-button label="Por nombre" icon="pi pi-sort" class="mr-2" styleClass="p-button-success" />
+    <p-button label="Por volar" icon="pi pi-sort" class="mr-2" styleClass="p-button-danger" />
+    <p-button label="Por color" icon="pi pi-sort" styleClass="p-button-help" />
+  </div>
+</p-toolbar>
