--- a/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
+++ b/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
@@ -13,3 +13,27 @@
     <p-button label="Por color" icon="pi pi-sort" styleClass="p-button-help" />
   </div>
 </p-toolbar>
+
+
+<div class="grid">
+  <div class="col mt-2">
+    <p-panel header="Héroes">
+      <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Nombre</th>
+            <th>Vuela</th>
+            <th>Color</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-heroe>
+          <tr>
+            <td>{{ heroe.nombre }}</td>
+            <td>{{ heroe.puedeVolar }}</td>
+            <td>{{ heroe.color }}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </p-panel>
+  </div>
+</div>
