--- a/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
+++ b/05-pipes-app/src/app/productos/pages/pedido/pedido.component.html
@@ -17,7 +17,7 @@
 <div class="grid">
   <div class="col mt-2">
     <p-panel header="Héroes">
-      <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+      <p-table [value]="heroes | ordenarPor:'puedeVolar'" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
           <tr>
             <th>Nombre</th>
