--- a/06-heroes-app/src/app/heroes/pages/lista/lista.component.html
+++ b/06-heroes-app/src/app/heroes/pages/lista/lista.component.html
@@ -1,5 +1,9 @@
-<ul>
-  <li *ngFor="let heroe of heroes">
-    {{ heroe.superhero }}
-  </li>
-</ul>
+<h1>Listado de héroes</h1>
+
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+  <div *ngFor="let heroe of heroes" class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <tarjeta-heroe [heroe]="heroe"></tarjeta-heroe>
+  </div>
+</div>
