--- a/06-heroes-app/src/app/heroes/pages/busqueda/busqueda.component.html
+++ b/06-heroes-app/src/app/heroes/pages/busqueda/busqueda.component.html
@@ -1,1 +1,10 @@
-<p>busqueda works!</p>
+<div class="flex flex-column p-2">
+  <h3>Buscador</h3>
+
+  <mat-form-field>
+    <mat-label>Buscador de héroes</mat-label>
+
+    <input type="text" matInput [formControl]="entradaBusqueda" />
+  </mat-form-field>
+
+</div>
