--- a/06-heroes-app/src/app/heroes/pages/anhadir/anhadir.component.html
+++ b/06-heroes-app/src/app/heroes/pages/anhadir/anhadir.component.html
@@ -9,40 +9,45 @@
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid" [formGroup]="formularioHeroe" (ngSubmit)="enviarFormulario()">
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Superhéroe</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required formControlName="superhero" />
           </mat-form-field>
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Alter ego</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required formControlName="alter_ego" />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Primera aparición</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required formControlName="first_appearance" />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Personajes</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required formControlName="characters" />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-            <mat-select required>
+            <mat-select required formControlName="publisher">
               <mat-option *ngFor="let publicador of publicadores" [value]="publicador.id">
                 {{ publicador.desc }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+
+          <mat-form-field class="col-12">
+            <mat-label>Imagen alternativa</mat-label>
+            <input matInput type="text" formControlName="alt_img" />
+          </mat-form-field>
+        </form>
 
         <div class="flex justify-content-between">
           <button mat-flat-button color="warn">Borrar</button>
-          <button mat-flat-button color="primary">
+          <button mat-flat-button color="primary" (click)="enviarFormulario()">
             <mat-icon>save</mat-icon>
             Guardar
           </button>
