--- a/06-heroes-app/src/app/heroes/pages/anhadir/anhadir.component.html
+++ b/06-heroes-app/src/app/heroes/pages/anhadir/anhadir.component.html
@@ -58,7 +58,7 @@
 
   <div class="col-12 sm:col-6">
     <mat-card>
-      <img src="" alt="Imagen del héroe" mat-card-image>
+      <img [src]="heroeActual | imagenHeroe" alt="Imagen del héroe" mat-card-image>
     </mat-card>
   </div>
 </div>
