--- a/07-formularios-app/src/app/reactivos/pages/basicos/basicos.component.html
+++ b/07-formularios-app/src/app/reactivos/pages/basicos/basicos.component.html
@@ -56,23 +56,28 @@
 
 <div class="row">
   <div class="col">
-
     <span>Valid</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.valid| json }}</pre>
 
     <span>Pristine</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.pristine| json }}</pre>
 
     <span>Touched</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.touched| json }}</pre>
 
     <span>Value</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.value| json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.controls['precio'].value | json }}</pre>
+
+    <span>Precio - Errors</span>
+    <pre>{{ formulario.controls['precio'].errors | json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ formulario.controls['nombre'].value | json }}</pre>
+
+    <span>Producto - Errors</span>
+    <pre>{{ formulario.controls['nombre'].errors | json }}</pre>
   </div>
 </div>
