--- a/07-formularios-app/src/app/reactivos/pages/basicos/basicos.component.html
+++ b/07-formularios-app/src/app/reactivos/pages/basicos/basicos.component.html
@@ -9,13 +9,16 @@
       <!-- Campo de producto -->
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Producto</label>
-        <div class="col-sm-9">
 
+        <div class="col-sm-9">
           <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre del producto">
 
-          <span class="form-text text-danger">
-            <!-- Debe de ser de 3 letras -->
-            error message
+          <span *ngIf="formulario.controls['nombre'].getError('required') && formulario.controls['nombre'].touched" class="form-text text-danger">
+            Este campo es requerido
+          </span>
+
+          <span *ngIf="formulario.controls['nombre'].getError('minlength') && formulario.controls['nombre'].touched" class="form-text text-danger">
+            Este campo requiere mínimo 3 letras
           </span>
         </div>
       </div>
