Clase 244. Eliminar elementos de un FormArray

--- a/07-formularios-app/src/app/reactivos/pages/dinamicos/dinamicos.component.html
+++ b/07-formularios-app/src/app/reactivos/pages/dinamicos/dinamicos.component.html
@@ -38,7 +38,7 @@
         <div class="input-group">
           <input [formControlName]="indice" class="form-control">
 
-          <button class="btn btn-outline-danger" type="button">
+          <button (click)="eliminarFavorito(indice)" class="btn btn-outline-danger" type="button">
             Eliminar
           </button>
         </div>
