--- a/07-formularios-app/src/app/reactivos/pages/dinamicos/dinamicos.component.html
+++ b/07-formularios-app/src/app/reactivos/pages/dinamicos/dinamicos.component.html
@@ -20,9 +20,9 @@
     <label class="col-sm-3 col-form-label">Agregar</label>
     <div class="col-sm-9">
       <div class="input-group">
-        <input class="form-control" placeholder="Agregar favorito">
+        <input [formControl]="nuevoFavorito" class="form-control" placeholder="Agregar favorito">
 
-        <button class="btn btn-outline-primary" type="button">
+        <button (click)="anhadirFavorito()" class="btn btn-outline-primary" type="button">
           Agregar favorito
         </button>
       </div>
@@ -62,13 +62,13 @@
 </form>
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ formulario.valid| json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ formulario.value | json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ nuevoFavorito.valid| json }}</pre>
+<pre>{{ nuevoFavorito.value| json }}</pre>
