--- a/07-formularios-app/src/app/reactivos/pages/interruptores/interruptores.component.html
+++ b/07-formularios-app/src/app/reactivos/pages/interruptores/interruptores.component.html
@@ -1,25 +1,26 @@
 <h2>Reactivos: Switches</h2>
 <hr>
 
-<form autocomplete="off">
+<form [formGroup]="formulario" (ngSubmit)="guardar()" autocomplete="off">
 
   <!-- Radio -->
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Género</label>
+
     <div class="col-sm-9">
       <div class="form-check">
-        <input class="form-check-input" type="radio" value="M" id="radioMasculino">
-        <label class="form-check-label" for="radioMasculino">
-          Masculino
-        </label>
+        <input formControlName="genero" class="form-check-input" type="radio" value="M" id="radioMasculino">
+        <label class="form-check-label" for="radioMasculino">Masculino</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="radio" value="F" id="radioFemenino">
-        <label class="form-check-label" for="radioFemenino">
-          Femenino
-        </label>
+        <input formControlName="genero" class="form-check-input" type="radio" value="F" id="radioFemenino">
+        <label class="form-check-label" for="radioFemenino">Femenino</label>
       </div>
+
+      <span *ngIf="esCampoValido('notificaciones')" class="form-text text-danger">
+        {{ obtenerErrorCampo('notificaciones') }}
+      </span>
     </div>
   </div>
 
@@ -28,9 +29,13 @@
     <label class="col-sm-3 col-form-label">Notificaciones</label>
     <div class="col-sm-9">
       <div class="form-check form-switch mt-2">
-        <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
+        <input formControlName="notificaciones" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
         <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
       </div>
+
+      <span *ngIf="esCampoValido('notificaciones')" class="form-text text-danger">
+        {{ obtenerErrorCampo('notificaciones') }}
+      </span>
     </div>
   </div>
 
@@ -39,15 +44,16 @@
     <label class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+        <input formControlName="terminosYCondiciones" class="form-check-input" type="checkbox" id="flexCheckDefault">
+
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
         </label>
       </div>
-      <span class="form-text text-danger">
-        Debe de aceptar las condiciones de uso
-      </span>
 
+      <span *ngIf="esCampoValido('terminosYCondiciones')" class="form-text text-danger">
+        {{ obtenerErrorCampo('terminosYCondiciones') }}
+      </span>
     </div>
   </div>
 
@@ -63,7 +69,7 @@
 </form>
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ formulario.value | json }}</pre>
 <br>
 
 <h5>Persona</h5>
@@ -71,7 +77,7 @@
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ formulario.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
