--- a/07-formularios-app/src/app/auth/pages/registro/registro.component.html
+++ b/07-formularios-app/src/app/auth/pages/registro/registro.component.html
@@ -3,12 +3,12 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off">
+    <form [formGroup]="formulario" autocomplete="off">
       <!-- Nombre -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Nombre del usuario">
+          <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre del usuario">
 
           <span class="form-text text-danger">
             Debe de ser en formato de nombre y apellido
@@ -20,7 +20,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
-          <input type="email" class="form-control" placeholder="Email del usuario">
+          <input formControlName="correo" type="email" class="form-control" placeholder="Email del usuario">
           <span class="form-text text-danger">
             mensaje de error del email
           </span>
@@ -31,7 +31,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Nombre código del usuario">
+          <input formControlName="usuario" type="text" class="form-control" placeholder="Nombre código del usuario">
           <span class="form-text text-danger">
             El username no puede ser Strider
           </span>
@@ -42,7 +42,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Password de su cuenta">
+          <input formControlName="clave" type="password" class="form-control" placeholder="Password de su cuenta">
 
           <span class="form-text text-danger">
             La contraseña debe de ser mayor de 6 caracteres.
@@ -54,7 +54,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Confirmar</label>
         <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Confirmar la contraseña">
+          <input formControlName="claveRepetida" type="password" class="form-control" placeholder="Confirmar la contraseña">
 
           <span class="form-text text-danger">
             Las contraseñas deben de ser iguales
@@ -73,23 +73,23 @@
   </div>
 </div>
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
+<h2>Form Valid: {{ formulario.valid }}</h2>
+<h2>Form Status: {{ formulario.status }}</h2>
+<h2>Form Pending: {{ formulario.pending }}</h2>
 <h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.errors| json }}</pre>
 
 <h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.value.nombre | json }}</pre>
 
 <h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.value.correo | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.value.usuario | json }}</pre>
 
 <h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.value.clave | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ formulario.value.claveRepetida | json }}</pre>
