Clase 253. Validator Functions

--- a/07-formularios-app/src/app/auth/pages/registro/registro.component.html
+++ b/07-formularios-app/src/app/auth/pages/registro/registro.component.html
@@ -86,7 +86,7 @@
 <pre>{{ formulario.value.correo | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ formulario.value.usuario | json }}</pre>
+<pre>{{ formulario.controls['usuario'].errors | json }}</pre>
 
 <h5>Password</h5>
 <pre>{{ formulario.value.clave | json }}</pre>
