Clase 255. Validator Service

--- a/07-formularios-app/src/app/auth/pages/registro/registro.component.html
+++ b/07-formularios-app/src/app/auth/pages/registro/registro.component.html
@@ -7,10 +7,11 @@
       <!-- Nombre -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Nombre</label>
+
         <div class="col-sm-9">
           <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre del usuario">
 
-          <span class="form-text text-danger">
+          <span *ngIf="esCampoValido('nombre')" class="form-text text-danger">
             Debe de ser en formato de nombre y apellido
           </span>
         </div>
@@ -19,9 +20,11 @@
       <!-- Email -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
+
         <div class="col-sm-9">
           <input formControlName="correo" type="email" class="form-control" placeholder="Email del usuario">
-          <span class="form-text text-danger">
+
+          <span *ngIf="esCampoValido('correo')" class="form-text text-danger">
             mensaje de error del email
           </span>
         </div>
@@ -30,9 +33,11 @@
       <!-- Username -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Username</label>
+
         <div class="col-sm-9">
           <input formControlName="usuario" type="text" class="form-control" placeholder="Nombre código del usuario">
-          <span class="form-text text-danger">
+
+          <span *ngIf="esCampoValido('usuario')" class="form-text text-danger">
             El username no puede ser Strider
           </span>
         </div>
@@ -41,10 +46,11 @@
       <!-- Password -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Password</label>
+
         <div class="col-sm-9">
           <input formControlName="clave" type="password" class="form-control" placeholder="Password de su cuenta">
 
-          <span class="form-text text-danger">
+          <span *ngIf="esCampoValido('clave')" class="form-text text-danger">
             La contraseña debe de ser mayor de 6 caracteres.
           </span>
         </div>
@@ -53,10 +59,11 @@
       <!-- Password2 -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Confirmar</label>
+
         <div class="col-sm-9">
           <input formControlName="claveRepetida" type="password" class="form-control" placeholder="Confirmar la contraseña">
 
-          <span class="form-text text-danger">
+          <span *ngIf="esCampoValido('claveRepetida')" class="form-text text-danger">
             Las contraseñas deben de ser iguales
           </span>
         </div>
