Clase 258. Verificar que dos campos sean iguales

--- a/07-formularios-app/src/app/auth/pages/registro/registro.component.html
+++ b/07-formularios-app/src/app/auth/pages/registro/registro.component.html
@@ -99,4 +99,4 @@
 <pre>{{ formulario.value.clave | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ formulario.value.claveRepetida | json }}</pre>
+<pre>{{ formulario.controls['claveRepetida'].errors | json }}</pre>
