--- a/08-selectores/src/app/paises/pages/selectores/selectores.component.html
+++ b/08-selectores/src/app/paises/pages/selectores/selectores.component.html
@@ -1,1 +1,16 @@
-<p>selectores works!</p>
+<h1 class="mt-3">Selectores anidados</h1>
+<hr>
+
+<form [formGroup]="formulario">
+
+  <!-- Continentes -->
+   <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">Continente:</label>
+      <select class="form-control">
+        <option value="">Seleccione el continente</option>
+      </select>
+    </div>
+   </div>
+
+</form>
