Clase 267. Selector de regiones

--- a/08-selectores/src/app/paises/pages/selectores/selectores.component.html
+++ b/08-selectores/src/app/paises/pages/selectores/selectores.component.html
@@ -9,6 +9,7 @@
       <label class="form-label">Continente:</label>
       <select formControlName="continente" class="form-control">
         <option value="">Seleccione el continente</option>
+            <option *ngFor="let continente of continentes" [value]="continente">{{ continente }}</option>
       </select>
     </div>
    </div>
