Clase 268. Segundo selector anidado - Países

--- a/08-selectores/src/app/paises/pages/selectores/selectores.component.html
+++ b/08-selectores/src/app/paises/pages/selectores/selectores.component.html
@@ -14,6 +14,17 @@
     </div>
    </div>
 
+  <!-- Países -->
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">País:</label>
+      <select formControlName="continente" class="form-control">
+        <option value="">Seleccione el país</option>
+            <!-- <option *ngFor="let continente of continentes" [value]="continente">{{ continente }}</option> -->
+      </select>
+    </div>
+   </div>
+
 </form>
 
 <h3>Formulario</h3>
