--- a/09-ciclo-de-vida/src/app/productos/pages/producto/producto.component.html
+++ b/09-ciclo-de-vida/src/app/productos/pages/producto/producto.component.html
@@ -1,5 +1,6 @@
 <p>producto works!</p>
 
-<precio />
+<precio *ngIf="productoVisible" [precio]="precioActual" />
 
 <button (click)="productoVisible = !productoVisible">Cambiar</button>
+<button (click)="incrementarPrecio()">Precio +1</button>
