Clase 288. Menú de la aplicación

--- a/10-mapas-app/src/app/mapas/components/menu-lateral/menu-lateral.component.html
+++ b/10-mapas-app/src/app/mapas/components/menu-lateral/menu-lateral.component.html
@@ -1,1 +1,5 @@
-<p>menu-lateral works!</p>
+<ul class="list-group">
+  <li *ngFor="let elemento of elementosMenu" [routerLink]="[elemento.ruta]" routerLinkActive="active" class="list-group-item">
+    Elemento 1
+  </li>
+</ul>
