Clase 296. Marcadores en el mapa

--- a/10-mapas-app/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/10-mapas-app/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -1,1 +1,9 @@
-<p>marcadores works!</p>
+<div id="mapa" #mapa></div>
+
+<ul class="list-group">
+  <li class="list-group-item">
+    Marcador 1
+  </li>
+</ul>
+
+<button class="btn btn-primary">+ Añadir marcador</button>
