Clase 297. Añadir marcadores de forma dinámica

--- a/10-mapas-app/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/10-mapas-app/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -6,4 +6,4 @@
   </li>
 </ul>
 
-<button class="btn btn-primary">+ Añadir marcador</button>
+<button class="btn btn-primary" (click)="crearMarcador()">+ Añadir marcador</button>
