--- a/10-mapas-app/src/app/mapas/components/menu-lateral/menu-lateral.component.html
+++ b/10-mapas-app/src/app/mapas/components/menu-lateral/menu-lateral.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
   <li *ngFor="let elemento of elementosMenu" [routerLink]="[elemento.ruta]" routerLinkActive="active" class="list-group-item">
-    Elemento 1
+    {{ elemento.nombre }}
   </li>
 </ul>
