Clase 309. Standalone - Como componente reutilizable

--- a/10-mapas-app/src/app/solo/pages/solo/solo.component.html
+++ b/10-mapas-app/src/app/solo/pages/solo/solo.component.html
@@ -7,7 +7,10 @@
     <div class="row">
       <div class="col">
         <p>* Este componente no necesita ser importado en módulos.</p>
-        <!-- <p *ngIf="">Es porque es su propio módulo {{ 1 + 1 }}</p> -->
+        <p>Es porque es su propio módulo {{ 1 + 1 }}</p>
+
+        <!-- Contador -->
+         <contador [contador]="25" />
       </div>
     </div>
   </div>
